--- a/main.css
+++ b/main.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.modrian {
+    border-collapse: collapse;
+    width: 600px;
+    height: 600px;
+    margin-left: 20px;
+}
+.modrian td {
+    width: 25px;
+    height: 25px;
+    border: 3px solid black;
+}
+
+
